# AiTrader

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  LIVE_READINESS.md  PROGRESS.md  README.md  REDESIGN_BRIEF.md  RETURN.md  WEEKLOG.md
account_manager/: __init__.py  account_manager.cpp  account_manager.hpp  credentials.py  log_safety.py
adaptive/: __init__.py  actions.py  interpret.py  materiality.py  news_feed.py  run.py  settings.py  shaping.py  store.py
api_server/: __init__.py  app.py  controls.py  health.py  operator.py  providers_cost.py  requirements.txt  run.py  stack.py  store.py  supervisor.py
backtest/: report.py
config/: config.cpp  config.hpp  default_config.yaml  example_live_disabled.yaml  provider_prices.yaml  regional_session.hpp  schema.md  yaml.cpp  yaml.hpp
core/: adaptive_actions.hpp  adaptive_controls.hpp  backtest_main.cpp  bridge_client.cpp  bridge_client.hpp  discovery_controls.hpp  engine.cpp  engine.hpp  feed_clock.hpp  layer_toggles.hpp  main.cpp  operator_controls.hpp  profile_controls.hpp  provenance.hpp  sleeve_controls.hpp  sleeves.hpp  util.cpp  util.hpp
discovery/: __init__.py  evaluate.py  finnhub_source.py  funnel.py  gate.py  run.py  settings.py  store.py  universe.py  watchlist.py  whale_surfacer.py
docs/: ARCHITECTURE.md  BUILD_SPEC.md  DNN_ADVISORY_DESIGN.md  DNN_RL_DESIGN.md  FOLLOWUP_CREDENTIALS.md
execution/: __init__.py  execution.cpp  execution.hpp  ibkr_adapter.py
learning/: adapt_gate.hpp  adaptive.cpp  adaptive.hpp
llm_consensus/: __init__.py  config_access.py  consensus.py  control_file.py  evidence.py  gate.py  http_json.py  model_check.py  persist.py  prompts.py  providers.py  verdicts.py
market_data/: __init__.py  alpaca_source.py  market_data.cpp  market_data.hpp  synthetic_feed.cpp  synthetic_feed.hpp  tradeable.py  universe.py
ml_factor/: __init__.py  factor.py  features.py  model.py  real_dataset.py  registry.py  train.py  train_real.py
ml_factor/models/: champion.npz
news_ingestion/: fetchers.py  news_ingestion.cpp  news_ingestion.hpp
ops/: _make_icon.py  backup.py  build_exe.bat  build_linux.sh  check_secrets.sh  demo.py  evidence.py  install_desktop.sh  install_git_hooks.sh  maintenance.py  market-ai-lab.desktop.in  run_demo.sh  run_desktop.sh  start.bat  start.sh  stop.sh  watchdog.py  weeklog.py
python_bridge/: __init__.py  client.py  requirements.txt  server.py
research_satellite/: __init__.py  long_term.py  research.py
risk/: risk_gate.cpp  risk_gate.hpp
rl_advisory/: __init__.py  config.py  dataset.py  env.py  evaluate.py  requirements.txt  service.py  train.py
scripts/: backfill_entry_decisions_20260723.py  list_provider_models.sh  measure_council_latency.py  prune_unserviceable_20260720.py  quarantine_fabricated_volume_20260723.py  quarantine_synthetic_bars_20260717.py  reconcile_stranded_positions_20260724.py  run_gui.sh  start_paper_trading.sh  test_full_system.sh  verify_live_integrations.sh
signal_engine/: council_gate.cpp  council_gate.hpp  factor_engine.cpp  factor_engine.hpp  strategy.cpp  strategy.hpp
storage/: schema.sql  storage.cpp  storage.hpp
tests/: CMakeLists.txt  conftest.py  test_abstention_and_bench.py  test_active_quant.py  test_adaptive_actions.py  test_adaptive_engine.cpp  test_adaptive_layer.py  test_adaptive_react.cpp  test_api_operator.py  test_api_server.py  test_backfill.py  test_backtest_harness.py  test_bridge_bind.py  test_config.cpp  test_config_editor.py  test_control_precedence.py  test_council_cost_controls.py  test_council_cost_cuts.py  test_council_evidence.py  test_council_single_run.py  test_credentials.py  test_discovery_budget.py  test_discovery_engine.cpp  test_discovery_funnel.py  test_discovery_watchlist.py  test_discovery_whale.py  test_dnn_pipeline.py  test_engine_stray_and_watchlist.py  test_entry_decision_recording.cpp  test_evidence_capture.py  test_fast_tier_confidence.cpp  test_feed_clock.cpp  test_feed_integrity.py  test_feed_modes.cpp  test_feed_no_fabrication.cpp  test_finnhub_source.py  test_ibkr_adapter.py  test_ibkr_routing.cpp  test_keystore_fd_leak.py  test_kill_switch.cpp  (+44 more)
tests/fixtures/: clankapp_sample.json  finnhub_SYNTHETIC.json  sec_edgar_13f_sample.json  sec_edgar_form4_sample.json  whale_alert_transactions_sample.json
ui/: MarketAILab.spec  app.py  config_editor.py  db.py  desktop.py  requirements-desktop.txt  requirements.txt  weight_tuner.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
web/src/: App.tsx  main.tsx  theme.css
web/src/api/: client.ts  format.ts  types.ts  tz.ts  useActivity.ts  useApi.ts  useStream.ts
web/src/api/__tests__/: tz-format.test.tsx
web/src/components/: ActivityBySymbol.tsx  ActivityFeed.tsx  AdaptiveControls.tsx  CouncilDecisions.tsx  CouncilPanel.tsx  DaySummary.tsx  DiagnosticsPanels.tsx  DiscoveryControls.tsx  DiscoveryDisabled.tsx  EngineControl.tsx  EquityChart.tsx  Explain.tsx  FactorParticipationPanel.tsx  KillSwitch.tsx  Layout.tsx  MarketsPanel.tsx  NearMissPanel.tsx  PositionsTable.tsx  ProviderCostPanel.tsx  RunStateBanner.tsx  Sidebar.tsx  SkipFeed.tsx  SleevesPanel.tsx  StalenessBadge.tsx  StatusBar.tsx  SubNav.tsx  Tables.tsx  TradeDetailModal.tsx  WhaleFeedsPanel.tsx  controls.tsx  ui.tsx
web/src/pages/: AdaptivePage.tsx  CategoryView.tsx  ControlsPage.tsx  CouncilPage.tsx  DiagnosticsPage.tsx  DiscoveryPage.tsx  HealthPage.tsx  LiveOverview.tsx  LivePage.tsx  LongTermPage.tsx  OperatorPage.tsx  OpsPage.tsx  Overview.tsx  PaperPage.tsx  SettingsPage.tsx  WatchlistPage.tsx
web/src/pages/__tests__/: adaptive.test.tsx  discovery-controls.test.tsx  discovery.test.tsx  health-finnhub.test.tsx  observability.test.tsx  operator.test.tsx  pages.test.tsx  settings-finnhub.test.tsx  sleeve-toggle.test.tsx  whale-feeds.test.tsx
whale_signal/: __init__.py  adapters.py  scoring.py  service.py
